ligolang/src/test/contracts/negative/deep_pattern_matching/pm_fail16.mligo

type parameter = { one : int ; two : int }

let main (action : parameter) : int =
  match action with
  | {one = _ ; three = _} -> 0
